kubernetes/k8s-manifests/namespace.yaml
apiVersion: v1 
kind: Namespace 
metadata:
  name: shopnow
  labels:
    app: ShopNow-app
    env: dev
