kubernetes/k8s-manifests/admin-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: shopnow
spec:
  replicas: 2
  selector:
    matchLabels:
      component: admin
  template:
    metadata:
      labels:
        component: admin
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: admin-deployment
          image: "975050024946.dkr.ecr.us-east-2.amazonaws.com/dev-shopnow-admin:admin-v3"
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: shopnow
spec:
  selector:
    component: admin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
