kubernetes/k8s-manifests/backend-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnow-backend-deployment
  namespace: shopnow
spec:
  replicas: 2
  selector:
    matchLabels:
      component: shopnow-backend
  template:
    metadata:
      labels:
        component: shopnow-backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: shopnow-backend-deployment
          image: "975050024946.dkr.ecr.us-east-2.amazonaws.com/dev-shopnow-backend:backend-v3"
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-backend-service
  namespace: shopnow
spec:
  selector:
    component: shopnow-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
