kubernetes/k8s-manifests/frontend-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: shopnow
spec:
  replicas: 2
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: frontend-deployment
          image: "975050024946.dkr.ecr.us-east-2.amazonaws.com/dev-shopnow-frontend:frontend-v3"
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: shopnow
spec:
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
