kubernetes/k8s-manifests/shopnow-database-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: shopnow
spec:
  replicas: 2
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
        - name: database
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: database-persistent-storage
              mountPath: /data/db
      volumes:
        - name: database-persistent-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: shopnow
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 27017
      targetPort: 27017
