kubernetes/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-ingress
  namespace: shopnow
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
